Stop elements from covering up messages when scrolling

--- a/project2/static/message.css
+++ b/project2/static/message.css
@@ -2,8 +2,15 @@
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 5px;
+    bottom: 0;
     margin: 0;
+    width: 100%;
+    padding-bottom: 5px;
+    height: 7.5%;
+}
+
+#message-form > * {
+    height: 100%;
 }
 
 .message > .content {
@@ -16,4 +23,10 @@
 .message > .sender {
     margin-right: 10px;
     font-size: .75em;
+}
+
+#chat-log {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    overflow-y: scroll;
 }
